fix: song position alignment

--- a/cfg/eww/src/scss/dashboard/rows/_second-row.scss
+++ b/cfg/eww/src/scss/dashboard/rows/_second-row.scss
@@ -33,7 +33,7 @@
 						color: $foreground-secondary;
 					}
 					.position {
-						margin-top: 3em;
+						margin-top: 3.8em;
 					}
 				}
 			}
